scripts command added

--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,14 @@
   "name": "doctor-appointment-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Pranab Kumar Pramanik",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
