another routes added

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,10 +9,15 @@
   ],
 
   "routes": [
+
+     {
+      "src": "/api(.*)",
+      "dest": "/server.js"
+    },
+
     {
       "src": "/(.*)",
       "dest": "/"
-      
     }
 
   ]
